--- a/registro2/index.html
+++ b/registro2/index.html
@@ -14,7 +14,7 @@
 
   <div class="container">
     <main>
-      <form action="#" method="get" class="row mt-4">
+      <form method="get" class="row mt-4">
         <div class="col">
           <h1 class="mb-3">Registro</h1>
           <hr class="my-4">
@@ -50,7 +50,7 @@
             </div>
 
 
-            <button class="btn btn-primary" type="submit">Registrarme</button>
+            <button class="btn btn-primary" type="submit" id="button">Registrarme</button>
 
 
           </div>
