--- a/registro2/index.html
+++ b/registro2/index.html
@@ -82,12 +82,11 @@
             <div class="col-sm-6">
               <label for="validationCustom03" class="form-label">Repetir contraseña</label>
               <input type="password" class="form-control" id="validationCustom03" required>
-              <div class="valid-feedback">
-                Dato correcto
-              </div>
+              
               <div class="invalid-feedback">
                 Contraseña no coincide
               </div>
+              
             </div>
 
             <div class="col-sm-12">
@@ -130,7 +129,7 @@
         </div>
         <div class="modal-footer">
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="terminos">
+            <input type="checkbox" class="form-check-input" id="terminos" required>
             <label class="form-check-label" for="terminos">Acepto los términos y condiciones del servicio.</label>
 
           </div>
