--- a/registro2/index.html
+++ b/registro2/index.html
@@ -92,6 +92,7 @@
             <div class="col-sm-12">
               <button type="button" class="btn btn-link ps-0" data-bs-toggle="modal"
                 data-bs-target="#modalTerminos">Términos del servicio</button>
+                <div id="errorterminos"></div>
                 <div class="valid-feedback">
                   Dato correcto
                 </div>
