--- a/registro2/index.html
+++ b/registro2/index.html
@@ -90,9 +90,11 @@
             </div>
 
             <div class="col-sm-12">
+              <div class="d-inline">
               <button type="button" class="btn btn-link ps-0" data-bs-toggle="modal"
                 data-bs-target="#modalTerminos">Términos del servicio</button>
-                <div id="errorterminos"></div>
+                <p  class="d-inline" id="errorterminos"></p>
+                </div>
                 <div class="valid-feedback">
                   Dato correcto
                 </div>
