--- a/registro2/index.html
+++ b/registro2/index.html
@@ -93,10 +93,7 @@
               <div class="d-inline">
               <button type="button" class="btn btn-link ps-0" data-bs-toggle="modal"
                 data-bs-target="#modalTerminos">Términos del servicio</button>
-                <p  class="d-inline" id="errorterminos"></p>
-                </div>
-                <div class="valid-feedback">
-                  Dato correcto
+                <p  class="rojo" id="errorterminos"></p>
                 </div>
               </div>
 
