--- a/registro2/index.html
+++ b/registro2/index.html
@@ -90,7 +90,7 @@
             </div>
 
             <div class="col-sm-12">
-              <div class="d-inline">
+              <div class="clase1">
               <button type="button" class="btn btn-link ps-0" data-bs-toggle="modal"
                 data-bs-target="#modalTerminos">Términos del servicio</button>
                 <p  class="rojo" id="errorterminos"></p>
