--- a/registro2/index.html
+++ b/registro2/index.html
@@ -92,9 +92,10 @@
             <div class="col-sm-12">
               <div class="clase1">
               <button type="button" class="btn btn-link ps-0" data-bs-toggle="modal"
-                data-bs-target="#modalTerminos">Términos del servicio</button>
-                <p  class="rojo" id="errorterminos"></p>
+                data-bs-target="#modalTerminos" id="boton">Términos del servicio</button>
+                <p  class="rojo aligment" id="errorterminos"></p>
                 </div>
+
               </div>
 
               <button class="btn btn-primary " type="submit" id="button" >Registrarme</button>
